# rterm

./: Cargo.toml  flake.nix  result
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
src/: app.rs  input_window.rs  main.rs  output_window.rs  termdev.rs  wraptext.rs
