[package]
name = "rterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.2", features=["derive"]}
nix = {version="0.24.1", features=["term"]}
tui = "0.19"
crossterm = "0.25"
tui-textarea = "0.2.0"
